--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
+html, body {
+    padding: 0;
+    margin: 0;
+    border: 0;
+}
 
-body {
-    /*
-    padding: 0 20%;
-    */
+.padding-container {    
+    padding: 0 15%;    
 }
 
 ul {
