--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@ html, body {
 }
 
 .padding-container {    
-    padding: 0 15%;    
+    padding: 0 15%;
+    display: flex;    
 }
 
 ul {
@@ -18,8 +19,11 @@ a {
     text-decoration: none;    
 }
 
-.header {
-    display: flex;
+.header, .main-part, .footer {
+    background-color: #1F2937;
+}
+
+.header .padding-container {
     align-items: center;
 }
 
@@ -37,14 +41,15 @@ a {
     color: #E5E7EB;
 }
 
-.main-part {
-    display: flex;
-    
+.main-part .padding-container {
+    padding-top: 50px;
+    padding-bottom: 70px;
+    gap: 18px;
 }
 
-h1 {
+.main-part-head {
     font-size: 48px;
-    font-weight: extra-bold;
+    font-weight: 600;
     color: #F9FAF8;
 }
 
@@ -66,10 +71,6 @@ h1 {
     display: inline-block;
 }
 
-.header, .main-part, .footer {
-    background-color: #1F2937;
-}
-
 .main-part img {
     width: 390px;
     height: 218px;
@@ -77,17 +78,17 @@ h1 {
     margin-right: auto;
 }
 
+.informations .padding-container {
+    margin: 3% 0 7% 0;
+    flex-direction: column;
+    text-align: center;
+}
+
 .info-header {
     font-size: 36px;
     font-weight: 800;
     color: #1F2937;
-}
-
-.informations {
-    margin: 5% 0 7% 0;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
+    margin-bottom: 4%;
 }
 
 .info-row {
@@ -95,19 +96,17 @@ h1 {
     flex-direction: row;
     justify-content: space-between;
 }
-/*
-.info-container {
-    padding: 0 16px;
-    margin: 0 16px;
+
+.info-row img {
+    border-radius: 8px;
 }
-*/
+
 .text {
     max-width: 180px;
 }
-
-.quote {
+/*problem with quote part's height*/
+.quote .padding-container {
     height: 200px;
-    display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
@@ -129,9 +128,23 @@ h1 {
 
 .sign-part {
     display: flex;
-    flex-direction: row;
-    background-color: #3882F6;
+    background-color: #F9FAF8;
     justify-content: center;
+    height: 200px;
+    align-items: center;
+}
+
+.sign-cover {
+    background-color: #3882F6;
+    height: 45%;
+    width: 80%;
+}
+/*sign part has a problem*/
+.sign-part .sign-cover .padding-container {
+    width: 70%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .sign-header {
@@ -141,6 +154,12 @@ h1 {
 
 .call-to-cation-text {
     color: #E5E7EB;
+}
+
+.right-sign {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .sign-part button {
@@ -162,3 +181,6 @@ h1 {
     color: #E5E7EB;
 }
 
+/*padding container was added later,
+so, some css might be missing.
+think about adding it, if there's bugs*/
