--- a/style.css
+++ b/style.css
@@ -104,9 +104,10 @@ a {
 .text {
     max-width: 180px;
 }
-/*problem with quote part's height*/
+
 .quote .padding-container {
-    height: 200px;
+    padding-top: 100px;
+    padding-bottom: 90px;
     justify-content: center;
     align-items: center;
     flex-direction: column;
@@ -138,6 +139,10 @@ a {
     background-color: #3882F6;
     height: 45%;
     width: 80%;
+    border-radius: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 /*sign part has a problem*/
 .sign-part .sign-cover .padding-container {
@@ -152,14 +157,13 @@ a {
     font-size: 24px;
 }
 
-.call-to-cation-text {
+.call-to-action-text {
     color: #E5E7EB;
 }
 
 .right-sign {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    align-items: center;
 }
 
 .sign-part button {
